--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
-idf_component_register(
-	SRCS "FreeRTOS_Support.c"
-	INCLUDE_DIRS "."
-	PRIV_REQUIRES hal_esp32 printfx syslog systiming
-)
+# RTOS SUPPORT
+set( srcs "FreeRTOS_Support.c" )
+set( include_dirs "." )
+set( requires common )
+set( priv_requires hal_esp32 printfx syslog systiming )
+idf_component_register(SRCS ${srcs} INCLUDE_DIRS ${include_dirs} REQUIRES ${requires} PRIV_REQUIRES ${priv_requires})
