--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@
 set( srcs "FreeRTOS_Support.c" )
 set( include_dirs "." )
 set( priv_include_dirs )
-set( requires )
-set( priv_requires "hal_esp32 main printfx syslog systiming" )
+set( requires "main" )
+set( priv_requires )
 
 idf_component_register(
 	SRCS ${srcs}
